# nyaa-cli

./: Cargo.toml
src/: main.rs
